--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wordletapp",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
@@ -14,6 +14,7 @@
     "alpinejs": "^3.8.1",
     "autoprefixer": "^10.4.2",
     "clipboard-polyfill": "^3.0.3",
+    "firebase": "^12.7.0",
     "postcss": "^8.4.5",
     "tailwindcss": "^3.0.16"
   }
