--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wordletapp",
-  "version": "1.1.0",
+  "version": "1.2.5",
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
@@ -16,6 +16,7 @@
     "clipboard-polyfill": "^3.0.3",
     "firebase": "^12.7.0",
     "postcss": "^8.4.5",
-    "tailwindcss": "^3.0.16"
+    "tailwindcss": "^3.0.16",
+    "three": "^0.182.0"
   }
 }
