--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ VITE_FIREBASE_PROJECT_ID=
 VITE_FIREBASE_STORAGE_BUCKET=
 VITE_FIREBASE_MESSAGING_SENDER_ID=
 VITE_FIREBASE_APP_ID=
+VITE_APP_URL=
+VITE_APP_NAME=
