--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "wordletapp",
-  "version": "2.2.4",
+  "version": "2.2.5",
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "playwright test"
   },
   "devDependencies": {
+    "@playwright/test": "^1.57.0",
     "vite": "^2.7.2"
   },
   "dependencies": {
